Bug 276526 - When deleting a picture with Image Editor, it then loads the second next picture.
Summary: When deleting a picture with Image Editor, it then loads the second next pict...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Workflow (other bugs)
Version First Reported In: 2.0.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-26 13:32 UTC by barsanuphe
Modified: 2022-02-03 04:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description barsanuphe 2011-06-26 13:32:43 UTC
Version:           2.0.0 (using Devel) 
OS:                Linux

Instead of displaying the next picture when an image is deleted with Image Editor, it skips a picture and displays the one after that. 

Reproducible: Always

Steps to Reproduce:
Open an image in Image Editor.
Delete it.


Actual Results:  
Image Editor loads the second following picture.

Expected Results:  
Image Editor should load the next picture.

This is a minor bug which at first gives the impression of having deleted 2 pictures instead of one. 

Running Archlinux AUR packages digikam-git and kipi-plugins-git.
Comment 1 Frederic Grelot 2011-06-29 18:27:42 UTC
I can confirm this bug with 2.0.0-rc, exactly same as described above
Comment 2 Marcel Wiesweg 2011-07-16 14:38:59 UTC
Git commit 7245b2c67619a72611a505b2dfc0184c25fbb15c by Marcel Wiesweg.
Committed on 16/07/2011 at 16:37.
Pushed by mwiesweg into branch 'master'.

Fix double step forward when current image is deleted from withing Image Editor.
If the current index is deleted, our views already select the appropriate next index.
In the ImageWindow, there was additional code to do that, resulting in advancing by two images.

BUG: 276526

M  +2    -1    NEWS
M  +3    -21   utilities/imageeditor/editor/imagewindow.cpp

http://commits.kde.org/digikam/7245b2c67619a72611a505b2dfc0184c25fbb15c