Fix double step forward when current image is deleted from withing Image Editor. If the current index is deleted, our views already select the appropriate next index. In the ImageWindow, there was additional code to do that, resulting in advancing by two images.

BUG: 276526