utilities/imageeditor/editor/imagewindow.cpp
@@ -1330,11 +1330,11 @@ void ImageWindow::deleteCurrentItem(bool ask, bool permanently)
     // We have database information, which means information will get through
     // everywhere. Just do it asynchronously.
 
+    removeCurrent();
+
     KIO::Job* job = DIO::del(kioURL, useTrash);
     job->ui()->setWindow(this);
     job->ui()->setAutoErrorHandlingEnabled(true);
-
-    removeCurrent();
 }
 
 void ImageWindow::removeCurrent()
@@ -1344,27 +1344,9 @@ void ImageWindow::removeCurrent()
         return;
     }
 
-    QModelIndex next = d->nextIndex();
-    QModelIndex prev = d->previousIndex();
-
     d->imageInfoModel->removeImageInfo(d->currentImageInfo);
 
-    QModelIndex newCurrent;
-
-    if (next.isValid())
-    {
-        newCurrent = next;
-    }
-    else if (prev.isValid())
-    {
-        newCurrent = prev;
-    }
-
-    if (newCurrent.isValid())
-    {
-        loadIndex(newCurrent);
-    }
-    else
+    if (d->imageInfoModel->isEmpty())
     {
         // No image in the current Album -> Quit ImageEditor...
 
